--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lowdb": "^3.0.0",
     "md5": "^2.3.0",
     "webcrack":"*",
+    "mountpath":"*",
     "mongoose": "^6.3.3",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.2.0",
@@ -77,10 +78,19 @@
     "stream":"*",
     "assert":"*",
     "pdfkit":"*",
+    "os":"*",
+    "@hapi/boom":"*",
+    "yargs":"*",
+    "util":"*",
+    "./api.js":"*",
+    "./lib/store.js":"*",
+    "./config.js":"*",
     "aptoide-scraper":"*",
     "yt-search":"*",
     "wibusoft":"*",
     "gemini-ai":"*",
+    "./lib/mongoDB.js":"*",
+    "./lib/simple.js":"*",
     "didyoumean":"*",
     "similarity": "^1.2.1",
     "socket.io": "^4.4.1",
