--- a/package.json
+++ b/package.json
@@ -58,6 +58,11 @@
     "lowdb": "^3.0.0",
     "md5": "^2.3.0",
     "webcrack":"*",
+    "wa-sticker-formatter":"*",
+    "../lib/webp2mp4.js":"*",
+    "../lib/uploadImage.js":"*",
+    "../lib/uploadFile.js":"*",
+    "../lib/sticker.js":"*",
     "mongoose": "^6.3.3",
     "node-cache": "^5.1.2",
     "node-fetch": "^3.2.0",
